# RealtimeMessaging-C

./: CMakeLists.txt  Doxyfile  README.md
example/: CMakeLists.txt  example.c  simple.c
lib/: CMakeLists.txt  authentication.c  authentication.h  balancer.c  balancer.h  channel.c  common.c  common.h  connection.c  connection.h  dlist.c  dlist.h  events.c  events.h  libortc.h  loops.c  loops.h  message.c  message.h  ortc.c  presence.c  presence.h
